--- a/index.html
+++ b/index.html
@@ -245,8 +245,8 @@
 <body class="theme-bg-primary theme-text-primary overflow-x-hidden">
 
     <!-- 1. Cover / Layar Pembuka --><div id="cover" class="fixed inset-0 z-50">
-        <!-- Dihapus: p-4 agar full-width di mobile --><div class="cover-blur-overlay">
-            <!-- Penyesuaian: Dibuat full-width di mobile, dan tetap jadi 'box' di desktop (md:) --><div class="relative z-10 theme-text-primary p-6 md:p-8 md:max-w-lg md:mx-auto md:border-2 md:border-amber-600/50 md:rounded-lg">
+        <!-- Diubah: Ditambahkan p-4 (padding) agar ada jarak aman dari tepi layar --><div class="cover-blur-overlay p-4">
+            <!-- Penyesuaian: Ditambahkan w-full agar kotak ini mengisi padding dari parent-nya --><div class="relative z-10 theme-text-primary p-6 md:p-8 w-full md:max-w-lg md:mx-auto md:border-2 md:border-amber-600/50 md:rounded-lg">
                 <!-- Ornamen Sudut Mewah --><div class="filigree-ornament top-left"></div>
                 <div class="filigree-ornament top-right"></div>
                 <div class="filigree-ornament bottom-left"></div>
